--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "JSHumanoids",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@xmldom/xmldom": "^0.8.8",
-    "ajv": "8.12.0",
-    "ajv-formats": "^2.1.1",
-    "ajv-i18n": "*",
-    "node-mkdirp": "*"
+    "ajv": "*",
+    "ajv-formats": "*",
+    "ajv-formats-draft2019": "*",
+    "ajv-i18n": "*"
   },
   "scripts": {
   }
